--- a/example/package.json
+++ b/example/package.json
@@ -6,14 +6,14 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "build:android": "react-native build-android --extra-params \"--no-daemon --console=plain -PreactNativeArchitectures=arm64-v8a\"",
-    "build:ios": "react-native build-ios --mode Debug"
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/native": "^7.1.17",
+    "@tecocraft/rn-deeplinking": "^0.1.2",
     "react": "19.1.0",
-    "react-native": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native": "0.81.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -23,9 +23,17 @@
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
     "@react-native/babel-preset": "0.81.0",
+    "@react-native/eslint-config": "0.81.0",
     "@react-native/metro-config": "0.81.0",
     "@react-native/typescript-config": "0.81.0",
+    "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-test-renderer": "^19.1.0",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "19.1.0",
+    "typescript": "^5.8.3",
     "react-native-builder-bob": "^0.40.13",
     "react-native-monorepo-config": "^0.1.9"
   },
