fix: add baseUrl option to tsconfig.json for improved module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "isolatedModules": false,
-    "baseUrl": ".",
-    "rootDir": "src"
+    "rootDir": "src",
+    "ignoreDeprecations": "6.0"
   },
   "include": ["src"]
 }
