--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prettier": "^3.0.3",
     "react": "19.1.1",
     "react-native": "0.81.4",
+    "react-native-codegen": "^0.70.7",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
