refactor: update RNDynamicLinkingPackage to implement ReactPackage interface and add useSmartLinking export

--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     ".": {
       "types": "./lib/index.d.ts",
       "default": "./lib/index.js"
+    },
+    "./useSmartLinking": {
+      "types": "./lib/useSmartLinking.d.ts",
+      "default": "./lib/useSmartLinking.js"
     }
   },
   "devDependencies": {
