--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
   "types": "./lib/index.d.ts",
   "files": [
     "src",
-    "lib",
-    "android",
-    "!android/build",
-    "!android/gradle",
-    "!android/gradlew",
-    "!android/gradlew.bat",
-    "!android/local.properties"
+    "lib"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -63,7 +57,6 @@
     "prettier": "^3.0.3",
     "react": "19.1.1",
     "react-native": "0.81.4",
-    "react-native-codegen": "^0.70.7",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
@@ -81,11 +74,8 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "codegenConfig": {
-    "name": "RNDynamicLinking",
-    "type": "modules",
-    "jsSrcsDir": "src/specs",
-    "tsSrcsDir": "src/specs"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "react-native-device-info": "^15.0.1"
+  }
 }
